# msp430-driverlib

./: README.md  release_notes.html
src/: CMakeLists.txt
src/MSP430F5xx_6xx/: CMakeLists.txt  usci_a_uart.c
src/MSP430F5xx_6xx/inc/: hw_memmap.h
src/driverlib/: CMakeLists.txt
src/driverlib/MSP430F5xx_6xx/: CMakeLists.txt  gpio.c  gpio.h  timer_a.c  timer_b.c  ucs.c
src/driverlib/MSP430FR57xx/: adc10_b.c
