CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0007 NEW)

PROJECT(msp430-driverlib C)
SET(msp430-driverlib_VERSION_MAJOR 2)
SET(msp430-driverlib_VERSION_MINOR 70)
SET(msp430-driverlib_VERSION_PATCH 01)
SET(msp430-driverlib_VERSION_TWEAK 01)

SET(TMP_PROJECT_DESCRIPTION "driverlib for MSP430 provided by TI"
        CACHE STRING "Project Description")

ADD_SUBDIRECTORY(driverlib)
